[gd_scene load_steps=20 format=3 uid="uid://tj2g8hwy2d8e"]

[ext_resource type="Script" uid="uid://bn1sm4tmhencm" path="res://Prototype_presentation_8.05.2025/overlab/charselect.gd" id="1_g1rkv"]
[ext_resource type="Texture2D" uid="uid://dxyjteves365y" path="res://Prototype_presentation_8.05.2025/overlab/asset/LabNPCs.png" id="2_c6fg3"]
[ext_resource type="Texture2D" uid="uid://ctvh1y6gh4jvn" path="res://GERF_version/Asset/graphic/circle_1.png" id="3_lkuq0"]
[ext_resource type="Texture2D" uid="uid://cdtwwkjd0j3hw" path="res://GERF_version/Asset/graphic/circle_2.png" id="4_ok78m"]
[ext_resource type="Texture2D" uid="uid://tle7o6kpdoi" path="res://GERF_version/Asset/graphic/circle_3.png" id="5_enxwq"]
[ext_resource type="Texture2D" uid="uid://b2xt6ydq27tve" path="res://GERF_version/Asset/graphic/circle_4.png" id="6_xuboy"]
[ext_resource type="Texture2D" uid="uid://b507bunentl55" path="res://GERF_version/Asset/graphic/button/gdb-xbox-2.png" id="7_ok78m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_enxwq"]
atlas = ExtResource("7_ok78m")
region = Rect2(448.779, 49.1009, 14.0469, 13.8491)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok78m"]
atlas = ExtResource("7_ok78m")
region = Rect2(449.305, 65.2955, 13.6693, 13.3096)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy27h"]
atlas = ExtResource("2_c6fg3")
region = Rect2(8, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7w1c"]
atlas = ExtResource("2_c6fg3")
region = Rect2(40, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy7nl"]
atlas = ExtResource("2_c6fg3")
region = Rect2(72, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_opmbj"]
atlas = ExtResource("2_c6fg3")
region = Rect2(104, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljrih"]
atlas = ExtResource("2_c6fg3")
region = Rect2(136, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr0jo"]
atlas = ExtResource("2_c6fg3")
region = Rect2(168, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_chaub"]
atlas = ExtResource("2_c6fg3")
region = Rect2(200, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlt8v"]
atlas = ExtResource("2_c6fg3")
region = Rect2(232, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nspwb"]
atlas = ExtResource("2_c6fg3")
region = Rect2(264, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_u1hik"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy27h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7w1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy7nl")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opmbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljrih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr0jo")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chaub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlt8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nspwb")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}]

[node name="charselect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -270.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1rkv")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -115.0
offset_top = -15.0
offset_right = 119.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 24
text = "Press A to join!"

[node name="Sprite2D" type="Sprite2D" parent="Label2"]
position = Vector2(111, 16)
scale = Vector2(2.41056, 2.41056)
texture = SubResource("AtlasTexture_enxwq")

[node name="Label3" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -218.0
offset_top = 136.0
offset_right = 228.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 24
text = "Press Y to change
 character"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Label3"]
position = Vector2(191, 15)
scale = Vector2(2.64133, 2.64133)
texture = SubResource("AtlasTexture_ok78m")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -61.0
offset_top = -79.0
offset_right = 66.0
offset_bottom = -48.0
theme_override_font_sizes/font_size = 24
text = "Player X"

[node name="Circle1" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 71)
scale = Vector2(3, 3)
texture = ExtResource("3_lkuq0")

[node name="Circle2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, 41)
scale = Vector2(3, 3)
texture = ExtResource("4_ok78m")

[node name="Circle3" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, 41)
scale = Vector2(3, 3)
texture = ExtResource("5_enxwq")

[node name="Circle4" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, 41)
scale = Vector2(3, 3)
texture = ExtResource("6_xuboy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -9)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_u1hik")
animation = &"2"
